# ws-research-connect-ghc

./: .gitignore  README.md  SaasManagement.slnx
src/backend/: Program.cs  SaasManagement.http  appsettings.json  backend.csproj  main.py  pyproject.toml
src/backend/Data/: AppDbContext.cs
src/backend/Endpoints/: ContractEndpoints.cs  CustomerEndpoints.cs  DashboardEndpoints.cs  PlanEndpoints.cs  ProductEndpoints.cs  TrialEndpoints.cs  UsageEndpoints.cs
src/backend/Models/: Contract.cs  ContractHistory.cs  Customer.cs  Enums.cs  MonthlyUsage.cs  Plan.cs  Product.cs  Trial.cs
src/backend/Properties/: launchSettings.json
src/backend/Services/: BillingService.cs
src/backend/app/core/: config.py  database.py  security.py
src/backend/app/dependencies/: auth.py  portal_auth.py
src/backend/app/models/: common.py
src/backend/app/routers/: admin_users.py  audit_logs.py  auth.py  contracts.py  customers.py  dashboard.py  imports.py  metrics_definitions.py  plans.py  portal_auth.py  portal_dashboard.py  portal_services.py  products.py  test_helpers.py  users.py
src/backend/app/schemas/: audit_log.py  auth.py  contract.py  contract_plan_history.py  customer.py  dashboard.py  metrics_definition.py  monthly_usage.py  plan.py  portal_auth.py  portal_dashboard.py  portal_service_launch.py  portal_subscription.py  portal_usage.py  product.py  usage_import.py  user.py
src/backend/app/services/: audit_service.py  contract_service.py  customer_service.py  dashboard_service.py  import_service.py  metrics_definition_service.py  plan_service.py  (+6 more)
src/backend/tests/: conftest.py  test_admin_users.py  test_audit_logs.py  test_auth.py  test_contracts.py  test_customers.py  test_dashboard.py  test_imports.py  test_metrics_definitions.py  test_plans.py  test_portal_auth.py  test_portal_dashboard.py  test_portal_services.py  test_products.py
(+434 files in other folders)
