[project]
name = "saas-management-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115,<1",
    "motor>=3.6,<4",
    "pymongo>=4.9,<5",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "python-multipart>=0.0.12",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "httpx>=0.27,<1",
    "anyio>=4.0,<5",
    "ruff>=0.15.7",
    "pytest-asyncio>=0.24,<1",
    "mongomock-motor>=0.0.36",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.uv]
python-preference = "managed"
